fix a collapse button bug

--- a/client/views/includes/header_home.less
+++ b/client/views/includes/header_home.less
@@ -50,7 +50,6 @@
     	}
     }
     .navbar-home-collapse{
-    	display: flex !important;
-    	justify-content: flex-end;
+    	float: right;
     }
 }
